# apr-cookbook

./: .clippy.toml  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  introduction.html  lcov.info  print.html  searchindex.js  searchindex.json
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml
.pmat/: tdg-rules.toml
.pmat-metrics/: commit-e433e2d-meta.json
advanced/: custom-models.html  performance.html  wasm.html
appendix/: qa-checklist.html  toyota-way.html
benches/: inference.rs
book/: book.toml
book/book/: 404.html  introduction.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
book/book/advanced/: custom-models.html  performance.html  wasm.html
book/book/appendix/: qa-checklist.html  toyota-way.html
book/book/cli/: apr-bench.html  apr-info.html
book/book/concepts/: apr-format.html  bundling.html  conversion.html  zero-copy.html
book/book/getting-started/: installation.html  quick-start.html  structure.html
book/book/recipes/: bundle-quantized.html  bundle-static.html  convert-gguf.html  convert-safetensors.html  encrypt-model.html  export-gguf.html  simd-acceleration.html
book/book/reference/: api.html  errors.html  features.html
book/src/: SUMMARY.md  introduction.md
cli/: apr-bench.html  apr-info.html
concepts/: apr-format.html  bundling.html  conversion.html  zero-copy.html
docs/roadmaps/: roadmap.yaml
docs/specifications/: apr-cookbook-latest-recipes-idempotent-useful-reproducible-isolated.md  cookbook-spec.md
examples/acceleration/: simd_matrix_operations.rs
examples/advanced/: clip_search.rs  code_defect_oracle.rs  edge_anomaly_detection.rs  embedding_visualization.rs  handwriting_recognition.rs  hierarchical_cache_benchmark.rs  image_classification.proptest-regressions  image_classification.rs  model_inspection_scoring.rs  online_training_defect.rs  quantization_quality_tradeoff.rs  rag_pipeline.rs  spanish_tutor.rs  streaming_sentiment.rs  style_transfer.rs  voice_recognition.rs  wasm_summarizer.rs
examples/api/: api_batch_inference.rs  api_call_model_inference.rs  api_model_health_check.rs  api_streaming_inference.rs
examples/bundling/: bundle_apr_lambda_package.rs  bundle_apr_quantized_q4.rs  bundle_apr_signed.proptest-regressions  bundle_apr_signed.rs  bundle_apr_static_binary.rs  bundle_encrypted_model.rs  bundle_quantized_model.rs  bundle_static_model.rs
examples/cli/: apr_bench.rs  apr_info.rs  cli_apr_bench.proptest-regressions  cli_apr_bench.rs  cli_apr_convert.rs  cli_apr_info.rs  cli_apr_serve.rs
examples/conversion/: convert_apr_to_gguf.rs  convert_gguf_to_apr.rs  convert_onnx_to_apr.rs  convert_phi_to_apr.rs  convert_safetensors_to_apr.rs
examples/creation/: create_apr_decision_tree.rs  create_apr_from_scratch.rs  create_apr_kmeans_clustering.rs  create_apr_linear_regression.rs  create_apr_ngram_language_model.rs
examples/distillation/: distill_knowledge_transfer.rs  distill_layer_matching.rs  distill_pruning_aware.rs  distill_quantization_aware.rs
examples/gpu/: gpu_cuda_inference.proptest-regressions  gpu_cuda_inference.rs  gpu_memory_management.rs  gpu_multi_gpu_inference.rs  gpu_tensor_core_optimization.rs
examples/monitoring/: hash_chain_audit.rs  inference_explainability.rs
examples/registry/: registry_model_comparison.rs  registry_model_lineage.rs  registry_model_rollback.rs  registry_register_apr.rs
examples/serverless/: serverless_cold_start_optimization.rs  serverless_container_image.rs  serverless_edge_function.rs  serverless_lambda_inference.rs
examples/simd/: simd_auto_vectorization.rs  simd_matrix_operations.rs  simd_quantized_operations.rs  simd_vectorized_inference.rs
examples/training/: continuous_train_curriculum.rs  continuous_train_federated_simulation.rs  continuous_train_incremental.rs  continuous_train_online_learning.rs
examples/wasm/: wasm_browser_inference.rs  wasm_progressive_loading.rs  wasm_streaming_compilation.proptest-regressions  wasm_streaming_compilation.rs  wasm_web_worker.rs  wasm_webgpu_acceleration.rs
getting-started/: installation.html  quick-start.html  structure.html
recipes/: bundle-quantized.html  bundle-static.html  convert-gguf.html  convert-safetensors.html  encrypt-model.html  export-gguf.html  simd-acceleration.html
recipes/a-creation/: create-apr-from-scratch.html  decision-tree.html  index.html  kmeans-clustering.html  linear-regression.html  ngram-language-model.html
recipes/b-bundling/: bundle-encrypted.html  bundle-quantized.html  bundle-static.html  index.html  lambda-package.html  quantized-q4.html  signed.html  static-binary.html
recipes/c-training/: curriculum.html  federated-simulation.html  incremental.html  index.html  online-learning.html
recipes/d-conversion/: apr-to-gguf.html  gguf-to-apr.html  index.html  onnx-to-apr.html  phi-to-apr.html  safetensors-to-apr.html
recipes/e-registry/: index.html  model-comparison.html  model-lineage.html  model-rollback.html  register-apr.html
recipes/f-api/: batch-inference.html  health-check.html  index.html  model-inference.html  streaming-inference.html
recipes/g-serverless/: cold-start.html  container-image.html  edge-function.html  index.html  lambda-inference.html
recipes/h-wasm/: browser-inference.html  index.html  progressive-loading.html  streaming-compilation.html  web-worker.html  webgpu-acceleration.html
recipes/i-gpu/: cuda-inference.html  index.html  memory-management.html  multi-gpu.html  tensor-core.html
recipes/j-simd/: auto-vectorization.html  index.html  matrix-operations.html  quantized-operations.html  vectorized-inference.html
recipes/k-distillation/: index.html  knowledge-transfer.html  layer-matching.html  pruning-aware.html  quantization-aware.html
recipes/l-cli/: apr-bench.html  apr-convert.html  apr-info.html  apr-serve.html  index.html
reference/: api.html  errors.html  features.html
src/: aprender_integration.rs  bundle.rs  convert.rs  error.rs  lib.rs  recipe.rs
tests/: proptest_aprender.rs  proptest_bundle.rs  proptest_convert.rs
(+156 files in other folders)
